@@ -1,4 +1,4 @@
-This directory holds the ClipArts.
+This directory contains the ClipArts.
 
 The ClipArts are used to illustrate the Honor Roll and Honor Roll by Subject Certificates.
 
