@@ -1,6 +1,0 @@
-Desktop Buffet Icons
-
-The folder /FS_icons contains selected icons from Desktop Boss Icons set that can be found here:
-http://www.desktop-icon.com/stock-icons/desktop-buffet-icons.htm
-
-All free icons contained in this folder are licensed under a Creative Commons Attribution-Share Alike 3.0 License. This means that you can freely use these icons for any personal and non-ommercial purposes (software interfaces, online services, blogs, templates etc.) while you include a link to www.aha-soft.com in your credits.
