@@ -1,4 +1,4 @@
-Thise directory holds the frames.
+This directory contains the frames.
 
 Frames are used as page background for the Honor Roll and Honor Roll by Subject Certificates
 
