@@ -56,6 +56,7 @@ Changes in 2.8
 - bugfix SQL bug more than one row returned by a subquery in Rollover.php
 - Moodle plugin: Remove "roll users and courses only ONCE" limitation in Moodle/functions.php & Moodle/School_Setup/Rollover.php
 - Arrows in CSS instead of GIF + rework switchMenu() in warehouse.js & stylesheet.css
+- Food Service icons: correct path & limit to image files in MenuItems.php
 
 Upgrade from 2.7.x
 ------------------
